= Version descriptions

== master

- Resolves: gh#372 commercial house numbers now can have comments, visible as tooltips

== 5.0

- A new `/osm/housenumber-stats/hungary/` page featuring new and all-time house number data

- A new `cherry.py` glue layer to help running on top of CherryPy

- <https://github.com/vmiklos/osm-gimmisn/issues/380> the validator now catches strings which are
  not valid items in an `invalid:` string list

- <https://github.com/vmiklos/osm-gimmisn/issues/363> next to letter suffixes (42/a), now digit
  suffixes are also accepted (42/1). Both are still limited to a single-char suffix (2020-03-23)

== 4.0

- <https://github.com/vmiklos/osm-gimmisn/issues/344> next to the existing "txt" output, a new
  "chkl" output is available for missing house numbers of a relation, providing a plain text
  checklist. (2020-03-07)

- yaml files are now parsed build-time to improve performance (main page loads 7 times faster)

- complete line coverage for the cron code, which was the last uncovered module

== 3.0

- complete test coverage for the wsgi code

== 2.0

- <https://github.com/vmiklos/osm-gimmisn/issues/322> alias names are now supported for relations,
  so compatibility (with existing bookmarks) does not break when renaming. (2019-01-10)

- <https://github.com/vmiklos/osm-gimmisn/issues/291> added error handling for not valid relation
  names. (2019-12-12)

- <https://github.com/vmiklos/osm-gimmisn/issues/285>: HTML output uses 42/A style for
  letter-suffixed house numbers, but plain text output uses 42a to help turning the output into
  `invalid` configs. (2019-12-06)

- <https://github.com/vmiklos/osm-gimmisn/issues/267>: it is now possible to opt in for a more
  strict behavior where 42/B is not considered mapped when 42/A is already mapped. (2019-11-29)

- <https://github.com/vmiklos/osm-gimmisn/issues/269>: noise in the reference can be now cleaned by