@@ -1,0 +1,3 @@
+@id	name	highway	service	surface	leisure	@type
+46985966	A utca	residential		asphalt		way
+46985967	B utca	residential		asphalt		way
